Bugfix :: Remove scrollbar in homepage (#2982)
* removing scroll from homepage

* updating height of page

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -731,7 +731,7 @@ button {
 
 .page-body,
 .homepage-body {
-  height: 100vh;
+  height: 90.6vh;
 
   .list-group.list-group-transparent.dark .all-apps-link,
   .list-group-item-action.dark.active {
